# workshop-ultimate-hybrid-search

./: README.md  pyproject.toml
notebooks/: 01-qdrant-indexing.ipynb  02-hybrid-search.ipynb
scripts/: run-qdrant.sh
