[tool.poetry]
name = "workshop-ultimate-hybrid-search"
description = "Materials for the Ultimate Hybrid Search Workshop"
authors = ["Kacper Łukawski <kacper.lukawski@qdrant.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyter = "^1.0.0"
qdrant-client = ">=1.10.0"
fastembed = "^0.3.3"
datasets = "^2.20.0"
ranx = "^0.3.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
